alignment issues with header

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: space-between;
     padding: 6%;
+    align-items: center;
 }
 
 .header_logo_name_icons>svg {
@@ -51,6 +52,7 @@
     /* background-color: aquamarine; */
     margin-left: -20%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .dropdown {
